deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${JOB_NAME}
  namespace: ${namespace}
spec:
  selector:
    matchLabels:
      app: ${JOB_NAME}
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: ${JOB_NAME}
    spec:
      nodeSelector:
        app: system-apps
      hostname: ${JOB_NAME}
      containers:
      - name: ${JOB_NAME}
        image: ${ACR_NAME}/$JOB_NAME:$BUILD_NUMBER
        imagePullPolicy: Always
        ports:
          - name: nginx-port
            containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: ${JOB_NAME}
  labels:
    app: ${JOB_NAME}
  namespace: ${namespace}
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 80 
  selector:
    app: ${JOB_NAME}
