ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
metadata:
  name: ${JOB_NAME}
  namespace: ${namespace}
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: phanissl
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
